testing mobile sizing

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 }
 
 </style>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
  <link rel="preconnect" href="https://fonts.googleapis.com">
