--- a/index.html
+++ b/index.html
@@ -350,6 +350,8 @@
 
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="https://raw.githubusercontent.com/cheekyjmusic/music/main/logo.png" type="image/x-icon">
+
 </head>
 <body>
  <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -375,7 +377,7 @@
 
     <div class="albums">
       <h2 class="section-title">Albums</h2>
-      <a href="https://sites.google.com/view/music-playr/artists/jorge/cheeky-boomin"><div class="album">
+      <a href="https://cheekyjmusic.github.io/music/cheekyboomin.html"><div class="album">
           <img src="https://assets.scratch.mit.edu/d26bac23485630c30531ec1d07788fa7.png" alt="Cheeky Boomin">
           <div class="album-name">Cheeky Boomin</div>
        <!--<div class="countdown-container">
