--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -202,7 +202,7 @@
       <div class="album-details">
         <span class="album-text">Album</span>
         <h1>Cheeky Boomin</h1>
-        <a href="https://sites.google.com/view/music-playr/artists/jorge?authuser=0"><span class="album-text">Cheeky J</span></a><span class="album-text"> · August 18 2023 · 6 songs</span>
+        <a href="https://cheekyjmusic.github.io/music"><span class="album-text">Cheeky J</span></a><span class="album-text"> · August 18 2023 · 6 songs</span>
           <p class="sfeature" onclick="toggleFeatures()">Show Features</p>
       </div>
     </div>
