--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -179,6 +179,7 @@
     margin-bottom: 10px;
    }
   </style>
+  <link rel="icon" href="https://raw.githubusercontent.com/cheekyjmusic/music/main/logo.png" type="image/x-icon">
 </head>
 <body>
  <div class="audio-player">
