--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -199,7 +199,7 @@
  <!--remove this later (end)-->
   <div class="container">
     <div class="album-container">
-      <img class="album-cover" src="https://assets.scratch.mit.edu/d26bac23485630c30531ec1d07788fa7.png" alt="Album Cover" onclick="resize()">
+      <img class="album-cover" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/cheekyboomin.png" alt="Album Cover" onclick="resize()">
       <div class="album-details">
         <span class="album-text">Album</span>
         <h1>Cheeky Boomin</h1>
