--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     <div class="albums">
       <h2 class="section-title">Albums</h2>
       <a href="https://cheekyjmusic.github.io/music/cheekyboomin.html"><div class="album">
-          <img src="https://assets.scratch.mit.edu/d26bac23485630c30531ec1d07788fa7.png" alt="Cheeky Boomin">
+          <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/cheekyboomin.png" alt="Cheeky Boomin">
           <div class="album-name">Cheeky Boomin</div>
        <!--<div class="countdown-container">
         <p class="countdown" id="countdown">Countdown to August 18</p
