--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
   <h2>Popular</h2>
   <ul>
    <li><a><span class="song-number">1 </span><img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/cheekyboomin.png" alt="Song 1" width="35" height="35">Metro Station</a></li>
-   <li><a><span class="song-number">2 </span><img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/submarine.png" alt="Song 2" width="35" height="35">Submarine</a></li>
+   <li><a><span class="song-number">2 </span><img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/Scrambled.png" alt="Song 2" width="35" height="35">Omelette</a></li>
   <li><a><span class="song-number">3 </span><img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/cheekyboomin.png" alt="Song 3" width="35" height="35">Hotdog Stand</a></li>
     <!-- Add more songs -->
   </ul>
@@ -388,10 +388,10 @@
     </div>
     <div class="singles">
   <h2 class="section-title">Singles</h2>
-      <!--<div class="single" data-cover-url="https://raw.githubusercontent.com/cheekyjmusic/music/main/omelette.png">
-    <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/omelette.png" alt="Omelette">
+      <div class="single" data-cover-url="https://raw.githubusercontent.com/cheekyjmusic/music/main/Scrambled.png">
+    <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/Scrambled.png" alt="Omelette">
     <div class="single-name">Omelette</div>
-  </div>-->
+  </div>
      <div class="single" data-cover-url="https://raw.githubusercontent.com/cheekyjmusic/music/main/submarine.png">
     <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/submarine.png" alt="Submarine" class="hover-outline">
     <div class="single-name">Submarine</div>
@@ -555,6 +555,8 @@ updateFaviconOnPlay();
         return "https://assets.scratch.mit.edu/get_image/.%2E/15da361dba6ad810f21595aee0d991f4.mp3";
       case "Suburbs Freestyle Remix":
         return "https://assets.scratch.mit.edu/get_image/.%2E/068fa9a4443dbc189f18993c939f9144.mp3";
+      case "Omelette":
+        return "https://github.com/cheekyjmusic/music/blob/main/songs/Omelette.mp3?raw=true";
       case "Submarine":
         return "https://assets.scratch.mit.edu/get_image/.%2E/3031330d599cd8f4fa961313032217cd.mp3";
       default:
