--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ updateFaviconOnPlay();
       case "Suburbs Freestyle Remix":
         return "https://assets.scratch.mit.edu/get_image/.%2E/068fa9a4443dbc189f18993c939f9144.mp3";
       case "Omelette":
-        return "https://github.com/cheekyjmusic/music/blob/main/songs/Omelette.mp3?raw=true";
+        return "https://raw.githubusercontent.com/cheekyjmusic/music/main/songs/Omelette.mp3";
       case "Submarine":
         return "https://assets.scratch.mit.edu/get_image/.%2E/3031330d599cd8f4fa961313032217cd.mp3";
       default:
