--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -178,10 +178,25 @@
     font-size: 20px;
     margin-bottom: 10px;
    }
+   .fullscreen {
+  position: absolute;
+  z-index: 10;
+  top: 10px;
+  right: 10px;
+}
+.fullscreen img {
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  opacity: 50%;
+}
   </style>
   <link rel="icon" href="https://raw.githubusercontent.com/cheekyjmusic/music/main/cheekyboomin.png" type="image/x-icon">
 </head>
 <body>
+    <div class="fullscreen">
+        <img onclick="fullscreen()" src="https://cdn-icons-png.flaticon.com/512/3354/3354155.png">
+       </div>
  <div class="audio-player">
     <audio id="audioPlayer" controls>
       <source id="audioSource" src="" type="audio/mpeg">
@@ -482,6 +497,29 @@ function resize() {
   // Add more songs with their names and URLs
 ];
 
+function fullscreen(){
+  if (!document.fullscreenElement) {
+    if (document.documentElement.requestFullscreen) {
+      document.documentElement.requestFullscreen();
+    } else if (document.documentElement.mozRequestFullScreen) { // Firefox
+      document.documentElement.mozRequestFullScreen();
+    } else if (document.documentElement.webkitRequestFullscreen) { // Chrome, Safari and Opera
+      document.documentElement.webkitRequestFullscreen();
+    } else if (document.documentElement.msRequestFullscreen) { // IE/Edge
+      document.documentElement.msRequestFullscreen();
+    }
+  } else {
+    if (document.exitFullscreen) {
+      document.exitFullscreen();
+    } else if (document.mozCancelFullScreen) { // Firefox
+      document.mozCancelFullScreen();
+    } else if (document.webkitExitFullscreen) { // Chrome, Safari and Opera
+      document.webkitExitFullscreen();
+    } else if (document.msExitFullscreen) { // IE/Edge
+      document.msExitFullscreen();
+    }
+  }
+}
 
   </script>
 </body>
