--- a/updates.html
+++ b/updates.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8" />
     <title>Update Log</title>
+    <style>
+        .info {
+            color: gray;
+        }
+        .back {
+            color: blue;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Whats New</h1>
-    <p>September 18, 2023: Added a fullscreen button to all the pages and an update log</p>
+    <p class="back">Go back</p>
+    <p class="info">These updates will not include song or album releases. These are all techinical updates.</p>
+    <p>September 18, 2023: Added a fullscreen button to all the pages and the update log</p>
 </body>
 </html>
