--- a/updates.html
+++ b/updates.html
@@ -12,13 +12,19 @@
             position: absolute;
             top: 10px;
             right: 10px;
+            cursor: poitner;
         }
     </style>
 </head>
 <body>
     <h1>Whats New</h1>
-    <p class="back">Go back</p>
+    <p onclick="goBack()" class="back">Go back</p>
     <p class="info">These updates will not include song or album releases. These are all techinical updates.</p>
     <p>September 18, 2023: Added a fullscreen button to all the pages and the update log</p>
+    <script>
+        function goBack(){
+            window.location.href = 'https://cheekyjmusic.github.io/music';
+        }
+    </script>
 </body>
 </html>
