--- a/updates.html
+++ b/updates.html
@@ -12,7 +12,7 @@
             position: absolute;
             top: 10px;
             right: 10px;
-            cursor: poitner;
+            cursor: pointer;
         }
     </style>
 </head>
