--- a/index.html
+++ b/index.html
@@ -367,8 +367,8 @@
 </head>
 <body>
  <div class="fullscreen">
-  <img onclick="fullscreen()" src="https://cdn-icons-png.flaticon.com/512/3354/3354155.png">
- </div>
+        <img onclick="fullscreen()" src="https://cdn-icons-png.flaticon.com/512/3354/3354155.png">
+       </div>
  <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
@@ -571,7 +571,7 @@ updateFaviconOnPlay();
       case "Suburbs Freestyle Remix":
         return "https://assets.scratch.mit.edu/get_image/.%2E/068fa9a4443dbc189f18993c939f9144.mp3";
       case "Omelette":
-        return "https://assets.scratch.mit.edu/get_image/.%2E/fdd94d62e46a8c033dadd120554ed251.mp3;
+        return "https://assets.scratch.mit.edu/get_image/.%2E/fdd94d62e46a8c033dadd120554ed251.mp3";
       case "Submarine":
         return "https://assets.scratch.mit.edu/get_image/.%2E/3031330d599cd8f4fa961313032217cd.mp3";
       default:
