--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ updateFaviconOnPlay();
       case "Suburbs Freestyle Remix":
         return "https://assets.scratch.mit.edu/get_image/.%2E/068fa9a4443dbc189f18993c939f9144.mp3";
       case "Omelette":
-        return "/songs/Omelette.mp3";
+        return "songs/Omelette.mp3";
       case "Submarine":
         return "https://assets.scratch.mit.edu/get_image/.%2E/3031330d599cd8f4fa961313032217cd.mp3";
       default:
