reintroduced taco bell diss

--- a/index.html
+++ b/index.html
@@ -427,6 +427,10 @@
     <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/sumo.png" alt="Sumo Wrestler">
     <div class="single-name">Sumo Wrestler</div>
   </div>
+  <div class="single" data-cover-url="https://raw.githubusercontent.com/cheekyjmusic/music/main/tacobell.png">
+    <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/tacobell.png" alt="Taco Bell Diss">
+    <div class="single-name">Taco Bell Diss</div>
+  </div>
   <div class="single" data-cover-url="https://raw.githubusercontent.com/cheekyjmusic/music/main/suburbsfreestyle.jpg">
     <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/suburbsfreestyle.jpg" alt="Suburbs Freestyle">
     <div class="single-name">Suburbs Freestyle</div>
@@ -566,14 +570,16 @@ updateFaviconOnPlay();
         return "https://assets.scratch.mit.edu/get_image/.%2E/97a08ca7aa1f977ad713c9afdb78bc6e.mp3";
       case "Sumo Wrestler":
         return "https://assets.scratch.mit.edu/get_image/.%2E/cd61d7bfe772e23f006de0a07abbc990.mp3";
+      case "Taco Bell Diss":
+        return "https://cheekyjmusic.github.io/music/songs/tacobell.mp3";  
       case "Suburbs Freestyle":
         return "https://assets.scratch.mit.edu/get_image/.%2E/15da361dba6ad810f21595aee0d991f4.mp3";
       case "Suburbs Freestyle Remix":
         return "https://assets.scratch.mit.edu/get_image/.%2E/068fa9a4443dbc189f18993c939f9144.mp3";
       case "Omelette":
-        return "songs/Omelette.mp3";
+        return "https://cheekyjmusic.github.io/music/songs/Omelette.mp3";
       case "Submarine":
-        return "https://assets.scratch.mit.edu/get_image/.%2E/3031330d599cd8f4fa961313032217cd.mp3";
+        return "https://cheekyjmusic.github.io/music/songs/submarine.mp3";
       default:
         return "";
     }
