--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: 'Prompt', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #2C2D31;
+            background-color: black;
             color: black;
         }
 
@@ -187,6 +187,11 @@
     outline: 4px solid white;
     transition: outline 0.3s ease;
   }
+  .expand-singles{
+    color:gray;
+    cursor: pointer;
+    margin-top: 0px;
+  }
     </style>
 </head>
 <body>
@@ -220,7 +225,7 @@
         </div>
 
         <div class="container">
-            <h2 class="section-title">Singles</h2>
+            <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">See All</a></h2>
             <div class="item-container">
                 <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/Scrambled.png">
@@ -230,7 +235,7 @@
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/submarine.png">
                     <p class="item-name">Submarine</p>
                 </div>
-                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/sbremix.mp3', 'Suburbs Freestyle Remix')">
+                <!--<div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/sbremix.mp3', 'Suburbs Freestyle Remix')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/sbremix.jpg">
                     <p class="item-name">SB Freestyle Remix</p>
                 </div>
@@ -253,7 +258,7 @@
                 <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/suburbsfreestyle.mp3', 'Suburbs Freestyle')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/suburbsfreestyle.jpg">
                     <p class="item-name">Suburbs Freestyle</p>
-                </div>
+                </div>-->
             </div>
         </div>
 
