--- a/singles.html
+++ b/singles.html
@@ -168,7 +168,7 @@
                 <div class="single-details">
                     <h2 class="single-name">Omelette (Prod. Gonzu Beats x Juko)</h2>
                     <p class="single-info">Single • 2023 • 1 Song</p>
-                    <img src="playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
         </div>
@@ -179,7 +179,7 @@
                 <div class="single-details">
                     <h2 class="single-name">Submarine (Prod. by SIGHOST x Sixweeks)</h2>
                     <p class="single-info">Single • 2023 • 1 Song</p>
-                    <img src="playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
         </div>
@@ -190,7 +190,7 @@
                 <div class="single-details">
                     <h2 class="single-name">Suburbs Freestyle Remix</h2>
                     <p class="single-info">Single • 2023 • 1 Song</p>
-                    <img src="playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
         </div>
@@ -201,7 +201,7 @@
                 <div class="single-details">
                     <h2 class="single-name">Corner Store Twinkie (Prod. by SIGHOST)</h2>
                     <p class="single-info">Single • 2023 • 1 Song</p>
-                    <img src="playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
         </div>
@@ -212,7 +212,7 @@
                 <div class="single-details">
                     <h2 class="single-name">1860s Lincoln</h2>
                     <p class="single-info">Single • 2023 • 1 Song</p>
-                    <img src="playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
         </div>
@@ -223,7 +223,7 @@
                 <div class="single-details">
                     <h2 class="single-name">Sumo Wrestler</h2>
                     <p class="single-info">Single • 2023 • 1 Song</p>
-                    <img src="playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
         </div>
@@ -234,7 +234,7 @@
                 <div class="single-details">
                     <h2 class="single-name">Taco Bell Diss</h2>
                     <p class="single-info">Single • 2023 • 1 Song</p>
-                    <img src="playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
         </div>
@@ -245,7 +245,7 @@
                 <div class="single-details">
                     <h2 class="single-name">Suburbs Freestyle</h2>
                     <p class="single-info">Single • 2023 • 1 Song</p>
-                    <img src="playbutton.svg">
+                    <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
         </div>
