--- a/singles.html
+++ b/singles.html
@@ -167,7 +167,7 @@
                 <img src="https://cheekyjmusic.github.io/music/Scrambled.png">
                 <div class="single-details">
                     <h2 class="single-name">Omelette (Prod. Gonzu Beats x Juko)</h2>
-                    <p class="single-info">Single • 2023 • 1 Song</p>
+                    <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
@@ -178,7 +178,7 @@
                 <img src="https://cheekyjmusic.github.io/music/submarine.png">
                 <div class="single-details">
                     <h2 class="single-name">Submarine (Prod. by SIGHOST x Sixweeks)</h2>
-                    <p class="single-info">Single • 2023 • 1 Song</p>
+                    <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
@@ -189,7 +189,7 @@
                 <img src="https://cheekyjmusic.github.io/music/sbremix.jpg">
                 <div class="single-details">
                     <h2 class="single-name">Suburbs Freestyle Remix</h2>
-                    <p class="single-info">Single • 2023 • 1 Song</p>
+                    <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
@@ -200,7 +200,7 @@
                 <img src="https://cheekyjmusic.github.io/music/twinkie.png">
                 <div class="single-details">
                     <h2 class="single-name">Corner Store Twinkie (Prod. by SIGHOST)</h2>
-                    <p class="single-info">Single • 2023 • 1 Song</p>
+                    <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
@@ -211,7 +211,7 @@
                 <img src="https://cheekyjmusic.github.io/music/lincoln.png">
                 <div class="single-details">
                     <h2 class="single-name">1860s Lincoln</h2>
-                    <p class="single-info">Single • 2023 • 1 Song</p>
+                    <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
@@ -222,7 +222,7 @@
                 <img src="https://cheekyjmusic.github.io/music/sumo.png">
                 <div class="single-details">
                     <h2 class="single-name">Sumo Wrestler</h2>
-                    <p class="single-info">Single • 2023 • 1 Song</p>
+                    <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
@@ -233,7 +233,7 @@
                 <img src="https://cheekyjmusic.github.io/music/tacobell.png">
                 <div class="single-details">
                     <h2 class="single-name">Taco Bell Diss</h2>
-                    <p class="single-info">Single • 2023 • 1 Song</p>
+                    <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
@@ -244,7 +244,7 @@
                 <img src="https://cheekyjmusic.github.io/music/suburbsfreestyle.jpg">
                 <div class="single-details">
                     <h2 class="single-name">Suburbs Freestyle</h2>
-                    <p class="single-info">Single • 2023 • 1 Song</p>
+                    <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
             </div>
