changed the single names font size

--- a/singles.html
+++ b/singles.html
@@ -63,8 +63,11 @@
         .single-name {
             color: white;
             font-size: 24px; 
+            font-size: 2.5vw;
             font-weight: 600;
             margin-bottom: 0px;
+            white-space: nowrap;
+            overflow: hidden;
         }
         .single-info {
             color: gray;
@@ -160,7 +163,7 @@
 
     <div class="main-container">
         <div class="header">
-            <h2>Cheeky J - Discography</h2>
+            <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/"><h2>Cheeky J - Discography</h2>
         </div>
         <div class="container">
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')" class="single-container">
