--- a/updates.html
+++ b/updates.html
@@ -20,6 +20,7 @@
     <h1>Whats New</h1>
     <p onclick="goBack()" class="back">Go back</p>
     <p class="info">These updates will not include song or album releases. These are all techinical updates.</p>
+    <p>September 24, 2023: Added singles.html. This will show each and every song I have released</p>
     <p>September 23, 2023: Redid the entire main page code</p>
     <p>September 18, 2023: Added a fullscreen button to all the pages and the update log</p>
     <script>
