--- a/singles.html
+++ b/singles.html
@@ -31,6 +31,7 @@
             height: 50px;
             cursor: pointer;
             opacity: 0.5;
+         filter: invert(100%);
         }
         .header h2{
             color: white;
@@ -166,7 +167,7 @@
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')" class="single-container">
                 <img src="https://cheekyjmusic.github.io/music/Scrambled.png">
                 <div class="single-details">
-                    <h2 class="single-name">Omelette (Prod. Gonzu Beats x Juko)</h2>
+                    <h2 class="single-name">Omelette</h2>
                     <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
@@ -177,7 +178,7 @@
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/submarine.mp3', 'Submarine')" class="single-container">
                 <img src="https://cheekyjmusic.github.io/music/submarine.png">
                 <div class="single-details">
-                    <h2 class="single-name">Submarine (Prod. by SIGHOST x Sixweeks)</h2>
+                    <h2 class="single-name">Submarine</h2>
                     <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
@@ -199,7 +200,7 @@
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/twinkie.mp3', 'Corner Store Twinkie')" class="single-container">
                 <img src="https://cheekyjmusic.github.io/music/twinkie.png">
                 <div class="single-details">
-                    <h2 class="single-name">Corner Store Twinkie (Prod. by SIGHOST)</h2>
+                    <h2 class="single-name">Corner Store Twinkie</h2>
                     <p class="single-info">Single • 2023</p>
                     <img src="https://cheekyjmusic.github.io/music/playbutton.svg">
                 </div>
