--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
 
         <div class="container">
-            <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">See All</a></h2>
+            <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">Expand</a></h2>
             <div class="item-container">
                 <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/Scrambled.png">
@@ -235,7 +235,7 @@
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/submarine.png">
                     <p class="item-name">Submarine</p>
                 </div>
-                <!--<div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/sbremix.mp3', 'Suburbs Freestyle Remix')">
+                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/sbremix.mp3', 'Suburbs Freestyle Remix')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/sbremix.jpg">
                     <p class="item-name">SB Freestyle Remix</p>
                 </div>
@@ -258,7 +258,7 @@
                 <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/suburbsfreestyle.mp3', 'Suburbs Freestyle')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/suburbsfreestyle.jpg">
                     <p class="item-name">Suburbs Freestyle</p>
-                </div>-->
+                </div>
             </div>
         </div>
 
