--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     left: 0px;
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: fixed;
     z-index: 5;
   }
     </style>
@@ -241,10 +241,10 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">See All</a></h2>
             <div class="item-container">
-                <!--<div class="item" onclick="play('file:///media/removable/Samsung%20USB/spotyf/music/hammock.wav', 'Hammock')">
+                <div class="item" onclick="play('file:///media/removable/Samsung%20USB/spotyf/music/hammock.wav', 'Hammock')">
                     <img class="item-image" src="hammock.png">
                     <p class="item-name">Hammock</p>
-                </div>-->
+                </div>
                 <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/Scrambled.png">
                     <p class="item-name">Omelette</p>
@@ -496,18 +496,6 @@ document.querySelector('.progress-bar-container').addEventListener('click', seek
      
      // GitHub Raw content URL for your JSON file
 var githubRawUrl = "https://raw.githubusercontent.com/cheekyjmusic/music/main/key.json";
-
-// Fetch the JSON content of the file
-fetch(githubRawUrl)
-    .then(response => response.json())
-    .then(data => {
-        // Access the data from the JSON file
-        var locked = data.locked;
-    })
-    .catch(error => {
-        // Handle any errors that occur during the fetch
-        console.error("Error fetching the file:", error);
-    });
      
     function lock() {
     var lockerDiv = document.querySelector('.lock');
