--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">See All</a></h2>
             <div class="item-container">
-                <div class="item" onclick="play('file:///media/removable/Samsung%20USB/spotyf/music/hammock.wav', 'Hammock')">
+                <!--<div class="item" onclick="play('file:///media/removable/Samsung%20USB/spotyf/music/hammock.wav', 'Hammock')">
                     <img class="item-image" src="hammock.png">
                     <p class="item-name">Hammock</p>
-                </div>
+                </div>-->
                 <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/Scrambled.png">
                     <p class="item-name">Omelette</p>
