--- a/singles.html
+++ b/singles.html
@@ -82,6 +82,9 @@
             margin-top: 5px;
             opacity: 50%;
         }
+     .single-details img:hover {
+       opacity: 100%;
+     }
         .main-container {
             padding: 20px;
             height: 1700px;
