--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
     position: fixed;
     height: 100%;
     width: 25vw;
+    min-width: 400px;
     background-color: transparent;
     z-index: 4;
     padding: 5px;
