--- a/archive.html
+++ b/archive.html
@@ -2,9 +2,6 @@
 <html>
 <head>
   <style>
-    /* Existing CSS code */
-
-    /* Add the following CSS rule */
     .description-text {
       margin-left: 20px;
       color: black;
@@ -15,18 +12,17 @@
     }
   </style>
 
-  <title>Artist Page - Spotify Style</title>
+  <title>Archived</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
       background-color: #f8f8f8;
-      color: black; /* Set default text color */
-      transition: background-color 0.5s, color 0.5s; /* Add transition effect for smooth color change */
+      color: black;
+      transition: background-color 0.5s, color 0.5s;
     }
 
-    /* Dark mode styles */
     body.dark-mode {
       background-color: #000;
       color: white;
@@ -50,10 +46,9 @@
       padding: 20px;
       background-color: white;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      transition: background-color 0.5s; /* Add transition effect for smooth background color change */
+      transition: background-color 0.5s; 
     }
 
-    /* Dark mode styles */
     .container.dark-mode {
       background-color: #222;
     }
@@ -123,12 +118,12 @@
       width: 150px;
       height: 150px;
       border-radius: 10px;
-      box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2); /* Add box shadow */
+      box-shadow: 0 8px 8px rgba(0, 0, 0, 0.2);
     }
 
     .album-name {
       margin-top: 5px;
-      color: #1DB954; /* Set album text color to green */
+      color: #1DB954; 
     }
 
     .singles {
@@ -153,7 +148,7 @@
 
     .single-name {
       margin-top: 5px;
-      color: #1DB954; /* Set single text color to green */
+      color: #1DB954;
     }
 
     .about {
@@ -187,7 +182,6 @@
       color: black;
     }
 
-    /* Dark mode button styles */
     .dark-mode-btn {
       position: fixed;
       bottom: 20px;
@@ -201,7 +195,6 @@
       cursor: pointer;
     }
 
-    /* Add the following styles for the copy URL button */
     .copy-url-btn {
       position: absolute;
       top: 20px;
@@ -238,7 +231,7 @@
   </header>
   <div class="container">
     <div class="image-container">
-      <img src="flow.jpg" alt="Artist Image">
+      <img src="https://assets.scratch.mit.edu/2ccd0c44df4e4e1d512c8009368c36ba.jpg" alt="Artist Image">
     </div>
     <div class="artist-info">
       <p>Genre: Rap</p>
@@ -260,7 +253,7 @@
       <h2>Albums</h2>
       <div class="album">
         <a href="">
-          <img src="dawgalbum.png" alt="DawgAlbum">
+          <img src="https://assets.scratch.mit.edu/68785d6bd07d0345d5592d1c0ae55927.png" alt="DawgAlbum">
           <div class="album-name">Dawg</div>
         </a>
       </div>
@@ -276,19 +269,19 @@
       <h2>Singles</h2>
       <div class="single">
         <a href="">
-          <img src="nikekicks.jpg" alt="Single 1">
+          <img src="https://assets.scratch.mit.edu/c02da78b12bcee314ab3b3f4ea92f0c9.jpg" alt="Single 1">
           <div class="single-name">Nike Kicks</div>
         </a>
       </div>
       <div class="single">
         <a href="">
-          <img src="track1.png" alt="Track 1">
+          <img src="https://assets.scratch.mit.edu/26cb06acbbd76e0442d34ee393bb0451.png" alt="Track 1">
           <div class="single-name">Track 1</div>
         </a>
       </div>
       <div class="single">
         <a href="">
-          <img src="nikekicksremix.jpg" alt="Nike Kicks Remix">
+          <img src="https://assets.scratch.mit.edu/b7c1e68b35b991ce4d5881228a14a9e3.png" alt="Nike Kicks Remix">
           <div class="single-name">Nike Kicks Remix</div>
         </a>
       </div>
@@ -297,7 +290,7 @@
       <h2>About</h2>
       <div class="description">
         <div class="about-image">
-          <img src="banner.jpg" alt="Artist Image">
+          <img src="https://assets.scratch.mit.edu/e67617d3c0c0977df1d2bb46214bebc7.jpg" alt="Artist Image">
         </div>
         <div class="description-text">
           <p>The Maximum Haver of Flow is a very humble artist from Los Angeles.</p>
