--- a/index.html
+++ b/index.html
@@ -242,6 +242,10 @@
             <img src="https://cdn-icons-png.flaticon.com/512/864/864685.png">
             <h1>Credits</h1>
         </div></a>
+        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/singles.html"><div style="margin-top: 10px;" class="menu-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/1705/1705062.png">
+            <h1>Discography</h1>
+        </div></a>
         <div onclick="fullscreen()" style="margin-top: 10px;" class="menu-item">
             <img src="https://cdn-icons-png.flaticon.com/512/3354/3354155.png">
             <h1>Fullscreen</h1>
