--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     width: 25vw;
     min-width: 400px;
     background-color: transparent;
-    z-index: 4;
+    z-index: 5;
     padding: 5px;
     object-position: top;
     transition: width 0.3s ease;
@@ -221,7 +221,17 @@
     align-items: center;
     color: black;
     margin-left: 5px;
-    cursor: pointer
+    cursor: pointer;
+}
+.menu-shadow {
+    background-color:black;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: 4;
+    transition: opacity 0.3s ease;
+    pointer-events: none;
 }
     </style>
 </head>
@@ -255,6 +265,8 @@
             <h1>Archive</h1>
         </div></a>
     </div>
+
+    <div onclick="toggleMenu()" class="menu-shadow"></div>
 
     <div class="thumbnail-container">
         <img src="https://raw.githubusercontent.com/cheekyjmusic/music/main/backgroundmainnew.jpg" alt="artist-thumbnail">
@@ -546,16 +558,27 @@ document.querySelector('.progress-bar-container').addEventListener('click', seek
 
  var menuState = "closed";
 const menuContainer = document.querySelector('.menu-container');
+const menuShadow = document.querySelector('.menu-shadow');
+const menuButton = document.querySelector('.menu-button');
+
+
 
 function toggleMenu() {
     if (menuState === "closed") {
         menuState = "open";
         menuContainer.style.backgroundColor = 'white';
         menuContainer.classList.add("menu-offscreen");
+        menuShadow.style.opacity = 0.5;
+        menuShadow.style.pointerEvents = 'auto';
+        menuButton.style.position = 'fixed';
     } else if (menuState === "open") {
         menuState = "closed";
         menuContainer.classList.remove("menu-offscreen");
         menuContainer.style.backgroundColor = 'transparent';
+        menuShadow.style.opacity = 0;
+        menuShadow.style.pointerEvents = 'none';
+        menuButton.style.position = 'absolute';
+
     }
 }
 
